--- a/ureport/templates/ureport/partials/viz/choropleth.html
+++ b/ureport/templates/ureport/partials/viz/choropleth.html
@@ -1,6 +1,6 @@
 {% load i18n %}
-<div id="map_{{ poll.pk }}" class="mapmodule">
-</div>
+<!--div id="map_{{ poll.pk }}" class="mapmodule">
+</div-->
 <div id="map_layers">
     <ul class="key">
 	<li>{% trans "No" %}  (50-60%)
