--- a/ureport/templates/ureport/partials/viz/multichoice_choropleth.html
+++ b/ureport/templates/ureport/partials/viz/multichoice_choropleth.html
@@ -1,5 +1,5 @@
-<div id="map_{{ poll.pk }}" class="mapmodule">
-</div>
+<!--div id="map_{{ poll.pk }}" class="mapmodule">
+</div-->
 <div id="map_layers">
     <ul class="key">
     </ul>
