Se comento la opcion del listado de  polls recientes

--- a/ureport/templates/ureport/home.html
+++ b/ureport/templates/ureport/home.html
@@ -18,11 +18,11 @@
 {% block content %}
     <div id="viz">
     </div>
-    <div class="scrolltop">
+    <!--div class="scrolltop">
 	<span>{% blocktrans %} PREVIOUS POLLS.    The last message is received at : {{timelastmsg}} {% endblocktrans %}</span>
-    </div>
-    <a name="poll_results"></a>
-        {% block poll_list %}
+    </div-->
+    <!--a name="poll_results"></a-->
+        <!--{% block poll_list %}
             <div class="poll_list">
                 <ul id="list_of_polls">
                     {% for p in polls %}
@@ -37,9 +37,9 @@
                     {% endfor %}
                 </ul>
             </div>
-        {% endblock %}
-    <div class="scrollbottom">
+        {% endblock %}-->
+    <!--div class="scrollbottom">
         &nbsp;
-    </div>
+    </div-->
     <script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/google-analytics.js"></script>
 {%endblock%}
