--- a/ureport/templates/ureport_layout.html
+++ b/ureport/templates/ureport_layout.html
@@ -56,6 +56,7 @@
                 <li><a href="/polls">{% trans "POLL ADMIN" %}</a></li>
                 <li><a href="/admin">{% trans "ADMINISTRATION" %}</a></li>
                 <li><a href="/router/console">{% trans "MESSAGE CONSOLE" %}</a></li>
+                <li><a href="/upload-contacts">{% trans "UPLOAD CONTACTS" %}</a> </li>
                 <!--li><a href="/about_ureport/">{% trans "ABOUT UREPORT" %}</a></li-->
                 <!--li><a href="/join/">{% trans "HOW TO JOIN" %}</a></li-->
                 <!--li><a href="{% url pulse %}">{% trans "NATIONAL PULSE" %}</a> </li-->
