--- a/ureport/templates/layout.html
+++ b/ureport/templates/layout.html
@@ -46,7 +46,7 @@
         </a>
         {% load humanize %}
         <span id="span_info"><span id="span_total">{{ total_ureporters|intcomma }}</span> {% trans "members to date" %}</span>
-        <img src="../static/images/logoSNIESENegro.png" style="position: absolute; bottom: 0; right: 0; height: 40px; width: 250px;"/>
+        <img src="static/ureport/images/logoSNIESENegro.png" style="position: absolute; bottom: 0; right: 0; height: 40px; width: 250px;"/>
     </div>
     <div class="content">
         <div class="subnav">
