--- a/ureport/static/stylesheets/ureport.css
+++ b/ureport/static/stylesheets/ureport.css
@@ -19,7 +19,7 @@ a:visited {
 }
 
 #container{
-    
+
     width:960px;
    margin-left: auto;
 	margin-right: auto;
@@ -78,7 +78,7 @@ a:visited {
 #span_info {
     position:relative;
     color:white;
-    font-size:12pt;
+    /*font-size:12pt;*/
     font-weight:bold;
     font-variant:small-caps;
     top: 7px;
@@ -135,7 +135,7 @@ a:visited {
     background: #696969;
     color: #fff;
     text-decoration: none;
-    
+
 }
 
 #header {
