--- a/ureport/templates/layout.html
+++ b/ureport/templates/layout.html
@@ -45,8 +45,9 @@
             <span class="tagline">{% trans "VOICE MATTERS" %}</span>
         </a>
         {% load humanize %}
-        <span id="span_info"><span id="span_total">{{ total_ureporters|intcomma }}</span> {% trans "members to date" %}</span>
-        <img src="../static/ureport/images/logoSNIESENegro.png" style="position: absolute; bottom: 0; right: 0; height: 40px; width: 250px;"/>
+        <span id="span_info">
+							<img src="../static/ureport/images/logoSNIESENegro.png" style="position: absolute; top: 0; right: 0; height: 40px; width: 250px;"/><br/>
+            	<span id="span_total">{{ total_ureporters|intcomma }}</span> {% trans " Contactos Añadidos" %}</span>
     </div>
     <div class="content">
         <div class="subnav">
