--- a/ureport/static/stylesheets/ureport.css
+++ b/ureport/static/stylesheets/ureport.css
@@ -76,14 +76,13 @@ a:visited {
 }
 
 #span_info {
-    position:relative;
-    color:white;
-    /*font-size:12pt;*/
-    font-weight:bold;
-    font-variant:small-caps;
-    top: 7px;
-    float:right;
-    padding-right:60px;
+    border-bottom: 1px solid #BBD8E7;
+    float: right;
+    margin-right: 10px;
+    margin-top: 30px; 
+    padding-bottom: 3px;
+    width: 120px;
+    text-align: right;
 }
 
 
