[#501] con @crisguitar Creacion de nuevo css

--- a/ureport/templates/layout.html
+++ b/ureport/templates/layout.html
@@ -5,7 +5,7 @@
     <title>Ureport - {% block page_title %}{% trans "Voice Matters" %}{% endblock %}</title>
 
     <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}ureport/stylesheets/base.css">
-
+    <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}ureport/stylesheets/banner.css">
 
 
     {% block stylesheets %}
